fixes: profile grid spacing mobile

--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -15,7 +15,7 @@
     .profile__info {
         box-sizing: border-box;
         column-gap: 10px;
-        grid-template-columns: 189px 18px;
+        grid-template-columns: auto auto;
         justify-content: center;
         max-width: 282px;
         padding: 26px 0 36px;
